--- a/www/templates/shared/legend/general.html
+++ b/www/templates/shared/legend/general.html
@@ -49,3 +49,22 @@
     This is a holiday
   </div>
 </div>
+
+<div class="row legend-row dates">
+  <div class="col-25 date-col">
+    <div class="sample-date">
+      <div class="date-note">
+        <i class="icon ion-bookmark"></i>
+      </div>
+      <div class="top-date">
+        12
+      </div>
+      <div class="date-content">
+        Ex
+      </div>
+    </div>
+  </div>
+  <div class="col-75 col-center">
+    This shift has a custom note
+  </div>
+</div>
