--- a/www/templates/shared/legend/general.html
+++ b/www/templates/shared/legend/general.html
@@ -53,6 +53,22 @@
 <div class="row legend-row dates">
   <div class="col-25 date-col">
     <div class="sample-date">
+      <div class="top-date">
+        12
+      </div>
+      <div class="date-content isAcceptedSwap">
+        Ex
+      </div>
+    </div>
+  </div>
+  <div class="col-75 col-center">
+    Already offered and accepted as a swap - now pending approval
+  </div>
+</div>
+
+<div class="row legend-row dates">
+  <div class="col-25 date-col">
+    <div class="sample-date">
       <div class="date-note">
         <i class="icon ion-bookmark"></i>
       </div>
