--- a/www/lib/ionic/scss/custom/shared/_legend.scss
+++ b/www/lib/ionic/scss/custom/shared/_legend.scss
@@ -50,6 +50,10 @@
       padding-top: 20px;
       margin-left: -2px;
       font-size: 20px;
+
+      &.isAcceptedSwap {
+        color: grey;
+      }
     }
   }
 
