Fix bug where sending wrong shift to shift service

--- a/www/templates/swaps/new-offer.html
+++ b/www/templates/swaps/new-offer.html
@@ -99,6 +99,9 @@
       <p>
         4. {{shift_owner.first_name}} already has a shift on that day
       </p>
+      <p>
+        5. Your shift is accepted and pending approval in another swap
+      </p>
       <br>
       <p>
         * Make sure you have inputted all your shifts into your <a href="#/tab/calendar/index">calendar</a>!
