Fix wording in edit offer based on not allowing accepted shifts as swaps

--- a/www/templates/swaps/new-offer.html
+++ b/www/templates/swaps/new-offer.html
@@ -100,7 +100,7 @@
         4. {{shift_owner.first_name}} already has a shift on that day
       </p>
       <p>
-        5. Your shift is accepted and pending approval in another swap
+        5. They are accepted and pending approval in another swap
       </p>
       <br>
       <p>
