--- a/www/templates/swaps/edit-offer.html
+++ b/www/templates/swaps/edit-offer.html
@@ -95,6 +95,9 @@
       <p>
         4. {{shift_owner.first_name}} already has a shift on that day
       </p>
+      <p>
+        5. They are accepted and pending approval in another swap
+      </p>
     </div>
   </ion-content>
 </ion-view>
