More explanations about why we're collecting sex

--- a/www/templates/initial/sign_up.html
+++ b/www/templates/initial/sign_up.html
@@ -35,7 +35,7 @@
         Please fill everything in
       </div>
       <div class="error-on-submit assertive ng-hide" ng-show="sexSelectedError">
-        Please select the sex you identify as
+        Please select the sex you identify as - this is so we can use appropriate pronouns within the app
       </div>
       <button class="button button-block button-positive" ng-click="createUser(email, firstName, lastName, password, sex)">
         Create Account
@@ -44,6 +44,9 @@
       <div>
         Already have an account? <a href="#/initial/login">Login</a>
       </div>
+      <br>
+      <br>
+      <br>
     </div>
   </ion-content>
 </ion-view>
