--- a/www/templates/swaps/up-for-grabs-list.html
+++ b/www/templates/swaps/up-for-grabs-list.html
@@ -3,6 +3,9 @@
   <ion-nav-buttons side="left">
     <a class="button button-icon icon ion-ios-arrow-back" href="#/tab/swaps/index" ng-click="clearHistory()">Back</a>
   </ion-nav-buttons>
+  <div class="row loader-holder">
+    <ion-spinner class="actual-loader spinner-positive ng-hide" icon="lines" ng-show="loader"></ion-spinner>
+  </div>
   <ion-content>
     <notification ng-model="message" class="ng-hide" ng-show="message"></notification>
     <div class="list card up-for-grabs-list" ng-repeat="shift in shiftsUpForGrabs" ng-if="shiftsUpForGrabs.length > 0">
